Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore 0.2.4:

* support for ** in package.keywords
* export preparsed SLOT to ebuild env; ebuilds shouldn't rely on this
  since it can lead to fun metadata issues, but certain eclasses do.
* fix exporting finalized form of RESTRICT to the build env; ticket 61.
* fix for RESTRICT=fetch to not treat the filename as a uri.
* expose the full make.conf environment to FETCHCOMMAND and RESUMECOMMAND-
  ticket 58
* added support for make.conf defined FETCH_ATTEMPTS; max # of unique uris to
  attempts per file before giving up, defaults to 10.


pkgcore 0.2.3:

* Better handling of non-ascii characters in metadata.xml.


pkgcore 0.2.2:

* The terminfo db is now used for xterm title updates. If title updates
  worked in pkgcore 0.2 or 0.2.1 and no longer work in 0.2.2 file a bug and
  include the TERM environment variable setting.

* misc fixup for asserts in cpy code when debugging is enabled, and closing
  directory fds when corner case error paths are taken (out of memory for
  example).

* atoms are picklable now.

* add tests for pmaint copy (quickpkg equivalent), and add
  --ignore-existing option to copy just pkgs that don't exist in the
  target repo.

* fix pmerge handling of --clean -B for automake and a few other DEPEND level
  hard cycles.


pkgcore 0.2.1:

* fix corner case for portage configuration support; old system (<=2004)
  installations may have /etc/portage/sets/world, which confused pmerges
  world updating, leading to writing bad entries.  Ticket 54.

* fix issues with distcc/ccache (ticket 55) so that they actually work.

* fix pconfig dump traceback; ticket 56.


pkgcore 0.2:

* glsa pkgset will now include metadata/glsa from overlays.

* pmaint script; tool for --sync'ing, doing quickpkging, moving packages
  between repos for repository conversions. General repository maintenance.
