@@ -6,14 +6,22 @@ See ChangeLog for full commit logs; this is summarized/major changes.
 pkgcore 0.2.4:
 
 * support for ** in package.keywords
+
 * export preparsed SLOT to ebuild env; ebuilds shouldn't rely on this
   since it can lead to fun metadata issues, but certain eclasses do.
+
 * fix exporting finalized form of RESTRICT to the build env; ticket 61.
+
 * fix for RESTRICT=fetch to not treat the filename as a uri.
+
 * expose the full make.conf environment to FETCHCOMMAND and RESUMECOMMAND-
   ticket 58
+
 * added support for make.conf defined FETCH_ATTEMPTS; max # of unique uris to
   attempts per file before giving up, defaults to 10.
+
+* added int_parser type for config instantiation definitions (ConfigHint),
+  and usual introspection support.
 
 
 pkgcore 0.2.3:
